problème apparition des objets réglée